--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,7 +89,9 @@ jobs:
     - name: clone DCS, update Cryptolib
       run: |
         git clone https://github.com/NASA-AMMOS/DCS.git
-        ls -la
+        git submodule update --init --recursive
+        ls -la ./DCS
+        ls -la ./DCS/ammos-cryptolib
         cd DCS/ammos-cryptolib/Cryptolib
         git config -f .gitmodules submodule.Cryptolib.branch $BRANCH_NAME
         git submodule update --remote
