--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,8 +90,9 @@ jobs:
     - name: update Cryptolib
       run: |
         cd DCS/ammos-cryptolib/CryptoLib
-        git fetch origin && git pull
-        git checkout $BRANCH_NAME || echo "Branch $BRANCH_NAME not found in submodule"
+        git config -f .gitmodules submodule.CryptoLib.branch $BRANCH_NAME
+        git submodule update --remote
+        git -C CryptoLib checkout $BRANCH_NAME || echo "Branch $BRANCH_NAME not found in submodule"
     - name: build DCS
       run: |
         cd ./DCS
