--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,10 +89,12 @@ jobs:
         pip3 install --break-system-packages pycryptodome cffi invoke
     - name: update Cryptolib
       run: |
+        ls -la
         cd DCS/ammos-cryptolib/CryptoLib
+        ls -la
         git config -f .gitmodules submodule.CryptoLib.branch $BRANCH_NAME
         git submodule update --remote
-        git -C . checkout $BRANCH_NAME || echo "Branch $BRANCH_NAME not found in submodule"
+        git checkout $BRANCH_NAME || echo "Branch $BRANCH_NAME not found in submodule"
     - name: build DCS
       run: |
         cd ./DCS
