--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,8 +93,7 @@ jobs:
         ls -la
         cd DCS/ammos-cryptolib/CryptoLib
         ls -la
-        git config -f .gitmodules submodule.CryptoLib.branch $BRANCH_NAME
-        git submodule update --remote
+        git fetch origin && git pull
         git checkout $BRANCH_NAME || echo "Branch $BRANCH_NAME not found in submodule"
     - name: build DCS
       run: |
