[nasa/cryptolib#453] More organization, mostly removed CRYPTO_LIB_SUCCESS checks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,9 @@
 cmake_minimum_required(VERSION 3.14.0)
 project(crypto C)
 
+# Uncomment for memory testing, breaks CodeQL CI Workflows
+# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address")
+
 #
 # CUSTOM PATH Definiton
 #
