[nasa/nos3#637] Implement standalone TCP build flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ option(KEY_VALIDATION "Validate existance of key duplication" OFF)
 OPTION(KMC_MDB_RH "KMC-MDB-RedHat-Integration-Testing" OFF) #Disabled by default, enable with: -DKMC_MDB_RH=ON
 OPTION(KMC_MDB_DB "KMC-MDB-Debian-Integration-Testing" OFF) #Disabled by default, enable with: -DKMC_MDB_DB=ON
 OPTION(CRYPTO_EPROC "Enables the building and use of Extended Procedures" OFF) #Disabled by default, enable with -DCRYPTO_EPROC=ON
+OPTION(STANDALONE_TCP "Enables TCP support for standalone" OFF)
 
 OPTION(MAC_SIZE "The size of the max MAC buffer in bytes")
 OPTION(IV_SIZE "The size of the max IV buffer in bytes")
