--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -87,7 +87,6 @@ if((KMC_MDB_DB OR KMC_MDB_RH))
              COMMAND ${PROJECT_BINARY_DIR}/bin/ut_tc_kmc
              WORKING_DIRECTORY ${PROJECT_TEST_DIR})
           
-endif()
     # add_test(NAME UT_SADB_ERR_CASES_KMC_CRYPTO
     #          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_sa_err_cases_kmc_crypto
     #          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
@@ -104,9 +103,9 @@ endif()
     #          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_mariadb
     #          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
     
-    # add_test(NAME UT_KMC_CRYPTO
-    #          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_kmc_crypto
-    #          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
+    add_test(NAME UT_KMC_CRYPTO
+             COMMAND ${PROJECT_BINARY_DIR}/bin/ut_kmc_crypto
+             WORKING_DIRECTORY ${PROJECT_TEST_DIR})
 
     # add_test(NAME UT_KMC_CRYPTO_WITH_MTLS_SADB
     #          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_kmc_crypto_with_mtls_sadb
@@ -120,25 +119,19 @@ endif()
     # add_test(NAME UT_KMC_CRYPTO_AUTH_ONLY
     #          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_kmc_crypto_auth_only
     #          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
-#endif()
 
-# if(TEST_ENC)
-#     add_test(NAME ET_DT_VALIDATION
-#              COMMAND ${PROJECT_BINARY_DIR}/bin/et_dt_validation 
-#              WORKING_DIRECTORY ${PROJECT_TEST_DIR})
-# endif()
+    add_test(NAME UT_TM_KMC
+             COMMAND ${PROJECT_BINARY_DIR}/bin/ut_tm_kmc
+             WORKING_DIRECTORY ${PROJECT_TEST_DIR})
+
+    add_test(NAME UT_AOS_KMC
+             COMMAND ${PROJECT_BINARY_DIR}/bin/ut_aos_kmc
+             WORKING_DIRECTORY ${PROJECT_TEST_DIR})
+endif()
+
 
 include_directories(include)
 include_directories(../include) 
-
-# if(TEST_ENC)
-#     set(Python3_FIND_STRATEGY VERSION)
-#     find_package (Python3 REQUIRED COMPONENTS Interpreter Development)
-#     execute_process(COMMAND pip3 show pycryptodome RESULT_VARIABLE EXIT_CODE OUTPUT_QUIET)
-#     if(NOT ${EXIT_CODE} EQUAL 0)
-#         message(FATAL_ERROR "The \"pycryptodome\" Python3 package is not installed, and is required for TEST_ENC.")
-#     endif()
-# endif()
 
 file( GLOB UNIT_FILES unit/*.c)
 foreach(SOURCE_PATH ${UNIT_FILES})
