Update build.yml to use main branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,6 +73,7 @@ jobs:
         repository: NASA-AMMOS/DCS
         path: DCS
         submodules: recursive
+        ref: main
     - name: setup python
       uses: actions/setup-python@v5
       with:
