add missing kmc/tc frees, add kmc_crypto UTs back

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -107,9 +107,9 @@ if((KMC_MDB_DB OR KMC_MDB_RH))
     #          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_mariadb
     #          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
     
-    # add_test(NAME UT_KMC_CRYPTO
-    #          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_kmc_crypto
-    #          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
+    add_test(NAME UT_KMC_CRYPTO
+             COMMAND ${PROJECT_BINARY_DIR}/bin/ut_kmc_crypto
+             WORKING_DIRECTORY ${PROJECT_TEST_DIR})
 
     # add_test(NAME UT_KMC_CRYPTO_WITH_MTLS_SADB
     #          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_kmc_crypto_with_mtls_sadb
